fix footer overlap on mobile

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -9,12 +9,8 @@
   margin-right: 0;
   width: 100%;
   clear: both;
-  /* sticky footer fix start */
-  position: absolute;
   bottom: 0em;
   height: auto;
-  /* sticky footer fix end */
-  margin-top: 3em;
   color: var(--accent);
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
